--- a/figma_layout/samlip/styles/index.css
+++ b/figma_layout/samlip/styles/index.css
@@ -1,79 +1,65 @@
-/* #wrap main */
-#wrap main {}
-#wrap main div {}
-#wrap main div>section{
-    background-size: cover;
-}
-#wrap main div>section>h2{
-    font-size: var(--text-title70);
-    font-weight: var(--weight-title);
-    letter-spacing: var(--letter-common);
+/* index 파일에만 존재하는 디자인 */
+#wrap main .visual_wrap {
+    width: 100vw; overflow: hidden;
 }
 
-/* 배너 1 */
-#wrap main div .bnr1 {
-    background-image: url(../image/row1_bnr1.jpg);
-    width: 1920px;
-    height: 850px;
+#wrap main .visual_wrap .visual_bnr_wrap {
+    /* section 정렬 */
+    display: flex;
+    flex-flow: row nowrap;
+    width: max-content; /* 자식의 전체 너비만큼/ */
 }
-#wrap main div .bnr1 h2 {
-    color: var(--color-white);
-    letter-spacing: var(--letter-common);
+#wrap main .visual_wrap .visual_bnr_wrap section {
+    background-size:cover;
+    height:750px; width: 1920px;
+    position: relative;
+}/* 공통 */
+#wrap main .visual_wrap .visual_bnr_wrap section h2 {
+    font-size:var(--text-title70);
+    font-weight:var(--weight-bold);
+    line-height:var(--line-title);
+    letter-spacing:var(--letter-minus2);
+    position:absolute;  left: 80px; bottom: 134px;
+}/* 공통 */
+#wrap main .visual_wrap .visual_bnr_wrap section p {
+    font-size:var(--text-contents21);
+    line-height:var(--line-contents);
+    letter-spacing:var(--letter-minus2);
+    color:var(--color-gray4);
+    position:absolute;  left: 80px; bottom: 30px;
+}/* 공통 */
+#wrap main .visual_wrap .visual_bnr_wrap .bnr1 {
+    background-image:url(../images/row1_bnr1.jpg);
 }
-#wrap main div .bnr1 p {
-    color: var(--color-white);
-}
+#wrap main .visual_wrap .visual_bnr_wrap .bnr1 h2 {
+    color:var(--color-white);
+    /* position: absolute;
+    left: 80px; top: 600px; */
 
-/* 배너 2 */
-#wrap main div .bnr2 {
-    background-image: url(../image/row1_bnr2.jpg);
-    width: 1920px;
-    height: 850px;
 }
-#wrap main div .bnr2 h2 {
-    color: var(--color-title_brown);
-    letter-spacing: var(--letter-common);
+#wrap main .visual_wrap .visual_bnr_wrap .bnr1 p {
+    color:var(--color-white);
+    /* position: absolute;
+    left: 80px; top: 756px; */
 }
-#wrap main div .bnr2 p {
-    color: var(--color-title_brown);
+#wrap main .visual_wrap .visual_bnr_wrap .bnr2 {
+    background-image:url(../images/row1_bnr2.jpg);
 }
-
-/* 배너 3 */
-#wrap main div .bnr3 {
-    background-image: url(../image/row1_bnr3.jpg);
-    width: 1920px;
-    height: 850px;
+#wrap main .visual_wrap .visual_bnr_wrap .bnr2 h2 {
+    color:var(--color-title-brown);
 }
-#wrap main div .bnr3 h2 {
-    color: var(--color-title_indigo);
-    letter-spacing: var(--letter-common);
+#wrap main .visual_wrap .visual_bnr_wrap .bnr2 p {}
+#wrap main .visual_wrap .visual_bnr_wrap .bnr3 {
+    background-image:url(../images/row1_bnr3.jpg);
 }
-#wrap main div .bnr3 p {
-    color: var(--color-title_indigo);
+#wrap main .visual_wrap .visual_bnr_wrap .bnr3 h2 {
+    color:var(--color-title-indigo);
 }
-
-/* 배너 4 */
-#wrap main div .bnr4 {
-    background-image:url(../image/row1_bnr4.jpg);
-    width: 1920px;
-    height: 850px;
+#wrap main .visual_wrap .visual_bnr_wrap .bnr3 p {}
+#wrap main .visual_wrap .visual_bnr_wrap .bnr4 {
+    background-image:url(../images/row1_bnr4.jpg);
 }
-#wrap main div .bnr4 h2 {
-    color: var(--color-title_coral);
-    letter-spacing: var(--letter-common);
+#wrap main .visual_wrap .visual_bnr_wrap .bnr4 h2 {
+    color:var(--color-title-coral);
 }
-#wrap main div .bnr4 p {
-    color: var(--color-title_coral);
-}
-
-/* 배너 5 */
-#wrap main div .bnr5 {
-    background-image: url(../image/row1_bnr5.jpg);
-    width: 1920px;
-    height: 850px;
-}
-#wrap main div .bnr5 h2 {
-    color:var(--color-title_indigo);
-    letter-spacing: var(--letter-common);
-}
-#wrap main div .bnr5 p {color:var(--color-title_indigo);}
+#wrap main .visual_wrap .visual_bnr_wrap .bnr4 p {}
