250827 삼립 index 완성

--- a/figma_layout/samlip/styles/common.css
+++ b/figma_layout/samlip/styles/common.css
@@ -3,9 +3,13 @@
     /* --대상-용도:반복속성값; */
     /* 글자크기 */
     --text-title70:4.375rem;
+    --text-title40:2.5rem;
     --text-contents21:1.313rem;
+    --text-card18:1.125rem;
     --text-menu18:1.125rem;
+    --text-sub14:0.875rem;
     --text-sub12:0.75rem;
+    --text-indicator10:0.625rem;
     /* 행간 */
     --line-title:0.9;
     --line-contents:1.5;
@@ -18,13 +22,21 @@
     --color-white:#fff;
     --color-gray4:#444;
     --color-graya:#aaa;
+    --color-grayd:#ddd;
+    --color-gray80:#808080;
+    --color-black:#000;
     --color-title-brown:#642c10;
     --color-title-indigo:#1d356d;
     --color-title-coral:#d43936;
+    --color-point:#36b4e5;
+
+
     /* 레이아웃 정보 */
     --width-desktop:1440px;
     --margin-desktop-l-r-80:80px;
 }
+/* body */
+body,html {scroll-behavior: smooth;}
 /* header 포함 공통 */
 #wrap {}
 #wrap header {
@@ -36,7 +48,11 @@
     flex-flow:row nowrap;/* 메인축(수평) 줄바꿈안함 */
     justify-content: space-between; /* 메인축 정렬(양쪽끝) */
     align-items:center;/* 교차축(수직) 가운데 */
-    position: relative; /* lnb 부모 크기+위치 기준 */
+    position: fixed; /* lnb 부모 크기+위치 기준 */
+    z-index: 900;
+    width: 100%; /* fixed or absolute 너비값을 재설정 해야한다 */
+    background-color: #fff;
+    left: 0; top: 0;
 }
 #wrap header h1 {}
 #wrap header h1 a {}
