--- a/figma_layout/samlip/styles/index.css
+++ b/figma_layout/samlip/styles/index.css
@@ -215,7 +215,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin: 0 auto;
+    margin: 0 auto 50px;
 }
 #wrap main .news_notice_wrap .view_all_button a img {}
 #wrap main .news_notice_wrap .view_all_button a span {font-size:var(--text-sub14);}
